<resources>
    <string name="app_name">RoyeKApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="usename">useName</string>
    <string name="add">ADD</string>
    <string name="number1">number1</string>
    <string name="number2">number2</string>
    <string name="result">Result:</string>
    <string name="google_search">Google Search</string>
    <string name="secondactivity">SecondActivity</string>
    <string name="second_activity">Second Activity</string>
    <string name="textview">TextView</string>
    <string name="search">Search</string>
    <string name="app_info">App Info</string>
</resources>